# makepad-map-widget

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-01-20-map-widget-design.md  2026-01-20-tile-disk-cache.md
examples/simple_map/: Cargo.toml
examples/simple_map/src/: app.rs  main.rs
src/: disk_cache.rs  lib.rs  map_view.rs  tiles.rs
